lib/stratiform/res/test/stratiform/corpus/neg/e209-tel-keyword-reserved.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e211-test

document
  field tel string
